# internet_A2

./: .gitignore  Allocation.md  DEPENDENCY_MANAGEMENT.md  README.md  cleanup.ps1  cleanup.sh  install.ps1  install.sh  restart.ps1  restart.sh
assignment/: A2_Complete_Documentation.md  Assignment1-requirement.md  Assignment2-requirement.md
backend/: config.py  main.py  pyproject.toml  requirements.txt
backend/models/: cart_item.py  user.py
backend/routers/: admin.py  auth.py  cart.py  products.py
backend/schemas/: user.py
backend/services/: auth_service.py  cart_service.py  product_service.py
database/: README.md  init.sql  init_db.py  migration_a2.sql  seed_data.sql
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/AdminDashboard/: AdminDashboard.jsx  AdminDashboard.styles.js
frontend/src/components/CartItem/: CartItem.jsx
frontend/src/components/ChangePassword/: ChangePassword.jsx  ChangePassword.styles.js
frontend/src/components/Header/: Header.jsx  Header.styles.js
frontend/src/components/Login/: Login.jsx  Login.styles.js
frontend/src/components/Modal/: LoadingOverlay.jsx  LoadingOverlay.styles.js
frontend/src/components/ProductCard/: ProductCard.jsx  ProductCard.styles.js
frontend/src/components/ProductEditPage/: ProductEditPage.jsx  ProductEditPage.styles.js
frontend/src/context/: AdminContext.jsx  AuthContext.jsx  CartContext.jsx  ProductsContext.jsx
frontend/src/hooks/: useCart.js
frontend/src/services/: adminService.js  authService.js  productService.js
(+6 files in other folders)
